# agreement

./: Cargo.toml  Makefile  README.md
agreement-api/: Cargo.toml
agreement-api/src/: error.rs  main.rs
agreement-api/src/routes/: mod.rs  root.rs
agreement-business/: Cargo.toml
agreement-business/src/: lib.rs
agreement-business/src/services/: man_service.rs  mod.rs
agreement-business/src/validators/: man_validator.rs  man_validator_stage_1.rs  man_validator_stage_2.rs  mod.rs
agreement-client/: Cargo.toml
agreement-client/src/: client.rs  error_adapter.rs  lib.rs
agreement-common/: Cargo.toml
agreement-common/src/: error.rs  id_generation.rs  lib.rs
agreement-error/: Cargo.toml
agreement-error/src/: lib.rs
agreement-models/: Cargo.toml
agreement-models/src/: custom.rs  error.rs  indto.rs  lib.rs
agreement-models/src/indto/: man_get_indto.rs  mod.rs  thing_create_indto.rs
agreement-models/src/outdto/: error.rs  error_outdto.rs  man_get_outdto.rs  mod.rs  thing_create.rs  thing_create_outdto.rs
agreement-services/: Cargo.toml
agreement-services/src/: lib.rs  man_service.rs
agreement-validation0/: Cargo.toml
agreement-validation0/src/: lib.rs  man_validation0.rs
agreement-web/: Cargo.toml
agreement-web/src/: error.rs  main.rs  state.rs
agreement-web/src/routes/: index.rs  index_get.rs  man_get.rs  mod.rs  page_index.rs  page_man.rs  thing_create.rs  user_create.rs
agreement-web/src/routes/api/: man_get.rs  mod.rs
agreement-web/static/: agreement_client.js  agreement_client_bg.wasm  index.js  styles.css
agreement-web/static/js/: agreement_client.js  agreement_client_bg.wasm  index.js  page_man.js  tools.js
agreement-web/templates/: base.html  index.html  page_man.html
htmx/: Cargo.toml
htmx/src/: lib.rs
scripts/: build-dev.sh  build-release.sh  deploy-dev.sh  deploy-release.sh
unlade/: Cargo.toml
unlade/src/: client.rs  error.rs
unladeapi/: Cargo.toml
unladeapi/src/: lib.rs
unlader/: Cargo.toml
unlader/src/: client.rs  error.rs
