[workspace]
members = [
    "agreement-client",
    "agreement-common",
    "agreement-models",
    "agreement-services",
    "agreement-web",
    "unlader",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
wasm-bindgen = "0.2.99"
