[workspace]
members = [
    "agreement-business",
    "agreement-client",
    "agreement-common",
    "agreement-models",
    "agreement-validation0",
    "agreement-web",
    "htmx",
    "unlade",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
chrono = { version = "0.4.39", features = ["wasmbind", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
wasm-bindgen = "0.2.99"
