[workspace]
members = [
    "agreement-business",
    "agreement-client",
    "agreement-common",
    "agreement-error",
    "agreement-models",
    "agreement-validation0",
    "agreement-web",
    "unlade",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = { version = "0.8.3", features = ["macros"] }
chrono = { version = "0.4.40", features = ["wasmbind", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
