[package]
name = "agreement-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
agreement-business = { path = "../agreement-business" }
agreement-models = { path = "../agreement-models" }
unlader = { path = "../unlader" }

wasm-bindgen.workspace = true

getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.49"
