[package]
name = "agreement-client"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
agreement-models = { path = "../agreement-models" }
agreement-validation0 = { path = "../agreement-validation0" }
unlader = { path = "../unlader" }

wasm-bindgen.workspace = true

getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4.49"
