[package]
name = "agreement-client"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
agreement-models = { path = "../agreement-models" }
agreement-validation0 = { path = "../agreement-validation0" }
unlade = { path = "../unlade" }

wasm-bindgen.workspace = true
wasm-bindgen-futures = { workspace = true }
