[package]
name = "agreement-web"
version = "0.1.0"
edition = "2021"

[dependencies]
agreement-common = { path = "../agreement-common" }
agreement-models = { path = "../agreement-models" }
agreement-services = { path = "../agreement-services" }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

askama = "0.12.1"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = "0.10.0"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing-subscriber = "0.3.19"
