[package]
name = "agreement-web"
version.workspace = true
edition.workspace = true

[dependencies]
agreement-business = { path = "../agreement-business" }
agreement-common = { path = "../agreement-common" }
agreement-error = { path = "../agreement-error" }
agreement-models = { path = "../agreement-models" }
agreement-validation0 = { path = "../agreement-validation0" }

axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

askama = "0.13.1"
axum-extra = "0.10.0"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing-subscriber = "0.3.19"
