[package]
name = "htmx"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen.workspace = true

js-sys = "0.3.77"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "UrlSearchParams",
    "Window",
] }
