[package]
name = "unlade"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true

js-sys = "0.3.77"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "UrlSearchParams",
    "Window",
] }
